[project]
name = "web-dev-hello-world"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "alfredo", email = "alorentiar03@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "django>=5.0.2",
    "flask>=3.0.2",
    "socketify>=0.0.27",
    "fastapi>=0.109.2",
    "requests-raw>=2.0.2",
]
